--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "browser-refresh server.js",
+    "build": "NODE_ENV=production pm2 start server.js --name youtube-download-video",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
